--- a/languages/zh_CN/pay_cod.pot
+++ b/languages/zh_CN/pay_cod.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the 货到付款 package.
 msgid ""
 msgstr ""
-"Project-Id-Version: 货到付款 1.25.0\n"
+"Project-Id-Version: 货到付款 1.30.0\n"
 "Report-Msgid-Bugs-To: https://www.ecjia.com/support/plugin/\n"
-"POT-Creation-Date: 2019-03-19 01:11:00+00:00\n"
+"POT-Creation-Date: 2019-03-20 09:19:27+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -17,7 +17,7 @@ msgid "货到付款"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "http://www.ecjia.com/plugins/ecjia.cod/"
+msgid "http://www.ecjia.com/plugins/ecjia.pay_cod/"
 msgstr ""
 
 #. Description of the plugin/theme
